Actual windows handling; preventing scrolling on touch move events on mobile

--- a/designer/designer.css
+++ b/designer/designer.css
@@ -8,9 +8,15 @@ body {
     position: absolute;
     left: 7px;
     top: 7px;
-    right: 7px;
+    right: 247px;
     bottom: 7px;
     background: white;
     border: solid 1px #963;
     height: auto;
+}
+
+#sidebar {
+    position: absolute;
+    right: 7px;
+    width: 240px;
 }
